fix: tighten about logo spacing and update title

--- a/src/app/public/pages/about/about.component.scss
+++ b/src/app/public/pages/about/about.component.scss
@@ -103,7 +103,7 @@
 
   &__inner {
     display: grid;
-    gap: 52px;
+    gap: 30px;
   }
 
   &__logos {
@@ -118,7 +118,7 @@
 
     &--secondary {
       grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 36px 44px;
+      gap: 48px 72px;
       max-width: 960px;
       margin: 0 auto;
     }
@@ -157,33 +157,33 @@
 
   &__logo-image {
     display: block;
-    width: 240px;
+    width: 180px;
     max-width: 100%;
-    max-height: 74px;
+    height: auto;
     object-fit: contain;
 
     &--primary {
       width: 420px;
       max-width: 100%;
-      max-height: 132px;
+      height: auto;
     }
 
     @media (max-width: 767px) {
       width: 180px;
       max-width: 100%;
-      max-height: 54px;
+      height: auto;
 
       &--primary {
         width: 280px;
         max-width: 100%;
-        max-height: 92px;
+        height: auto;
       }
     }
   }
 
   &__content {
     max-width: 980px;
-    margin: 0 auto;
+    margin: 18px auto 0;
     text-align: center;
   }
 
